global/_disclosures.scss
/*.gi-disclosure--body .gi-disclosure__toggle {
  border: solid transparent 4px;
  padding: 20px 90px 20px 10px;
}*/

h2.gi-disclosure__heading .gi-disclosure__toggle-text {
  font-size: 1.25rem;// changed from 2rem to 1.75rem task 2193
}
h3.gi-disclosure__heading .gi-disclosure__toggle-text {
  font-size: 1.3rem;//change from 1.75 rem to 1.5rem task 2193
}

/*======================================
5543 Global style for disclosures
======================================*/
$string:"data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'%3E%3Ccircle cx='12' cy='12' r='10' fill='none' stroke='%231f78c7' stroke-width='2'/%3E%3Cpath d='M6,10L12,16L18,10' fill='none' stroke='%231f78c7' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E";
$string2: str-replace($string, ' ', '%20');
$disclosure-show-blue: url($string2);

$string:"data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'%3E%3Ccircle cx='12' cy='12' r='10' fill='none' stroke='%231f78c7' stroke-width='1.5'/%3E%3Cpath d='M6.5,14.5L12,8.5L17.5,14.5' fill='none' stroke='%231f78c7' stroke-width='1.5' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E";
$string2: str-replace($string, ' ', '%20');
$disclosure-hide-blue: url($string2);

$string:"data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'%3E%3Ccircle cx='12' cy='12' r='10' fill='none' stroke='%23FFFFFF' stroke-width='2'/%3E%3Cpath d='M6,10L12,16L18,10' fill='none' stroke='%23FFFFFF' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E";
$string2: str-replace($string, ' ', '%20');
$disclosure-white: url($string2);

$string:"data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'%3E%3Ccircle cx='12' cy='12' r='10' fill='none' stroke='%23000000' stroke-width='2'/%3E%3Cpath d='M6,10L12,16L18,10' fill='none' stroke='%23000000' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E";
$string2: str-replace($string, ' ', '%20');
$disclosure-show-black: url($string2);

$string:"data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'%3E%3Ccircle cx='12' cy='12' r='10' fill='none' stroke='%23000000' stroke-width='1.5'/%3E%3Cpath d='M6.5,14.5L12,8.5L17.5,14.5' fill='none' stroke='%23000000' stroke-width='1.5' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E";
$string2: str-replace($string, ' ', '%20');
$disclosure-hide-black: url($string2);

.gi-disclosure--body{
  border: none;
}

.gi-disclosure--body button.gi-disclosure__toggle {
  border: solid $grey-3 1px;
  padding: 20px 100px 20px 10px;  
  border-bottom: 0;
    
  &:hover{
    text-decoration: underline;
    text-underline-offset: 4px;
    text-decoration-thickness: 2px;
    color: $link-color;
    
    &:after {
      text-decoration: underline;
      text-decoration-thickness: 2px;
      color: $link-color;
    }    
  }
}

//5626
.gi-disclosure:not(:has(+ .gi-disclosure)) {
  border-bottom: 1px solid $grey-3;
}

button.btn--disclosure-toggle { //TODO Refactor - this class also exists in buttons.scss and below in this file, can they all be combined into one for easier debugging?
  color: $white;
  border-radius: 6px; 
  background-image: $disclosure-white; 
  background-repeat: no-repeat;  
  background-position: center right 8px;
  background-size: 20px;

  &:focus{
    background-image: $disclosure-show-black;
    background-repeat: no-repeat;  
    background-position: center right 8px;
    background-size: 20px;
  }
}

.gi-disclosure--body .gi-disclosure__toggle[aria-expanded=true]:focus {
  &::after {
    border-bottom: solid $black 3px;
    color: $black;
    background-color: $focus-color;
    background-image: $disclosure-hide-black;
  }
}

.gi-disclosure--body .gi-disclosure__toggle::after {
  content: "Show";
  font-family: 'Assistant', 'Open Sans', sans-serif;
  font-size: 1.25rem;
  font-weight: 700;
  background-color: transparent;    
  background-image:$disclosure-show-blue; 
  background-repeat: no-repeat;
  background-position: 95% 50%;
  background-size: 18px 18px;
  display: inline-block;
  top: 50%;
  transform: translateY(-50%);
  padding-right: 22px;
  border-bottom: solid 3px transparent;
  color: $link-color;  
}
  
.gi-disclosure--body .gi-disclosure__toggle[aria-expanded=true]::after {
  content: "Hide";
  font-family: 'Assistant', 'Open Sans', sans-serif;
  font-size: 1.25rem;
  font-weight: 700;
  background-color: transparent;    
  background-image: $disclosure-hide-blue;
  background-repeat: no-repeat;
  background-position: 95% 50%;
  background-size: 18px 18px;
  display: inline-block;
  top: 50%;
  transform: translateY(-50%);
  padding-right: 28px;
  border-bottom: solid 3px transparent;
  color: $link-color;  
}

.gi-disclosure--body .gi-disclosure__toggle[aria-expanded=true]{
  border-bottom: 0;
}

.gi-disclosure--body .gi-disclosure__content{
  padding: 10px 10px;
  border: solid $grey-3 1px;
  border-top: 0;
  border-bottom: 0;
}

.gi-disclosure--body .gi-disclosure__toggle:focus { 
  z-index: 1;
}


.event .event__body .gi-disclosure.gi-disclosure--body {

  border: none;

  .gi-disclosure__toggle {
    border: solid 4px transparent;
    padding: 0px 40px 10px 0px;

    position: relative;
    width: 200px;
    color: $link-color;
  }

  h3.gi-disclosure__heading .gi-disclosure__toggle-text {
    font-size: 1.25rem;
    padding-right: 40px;
  }

  .gi-disclosure__toggle:hover {  
    background-color: transparent;
    color: $link-color-darken;
  }

  .gi-disclosure__toggle:focus {
    background-color: $focus-color;
    border-color: $focus-color;
    outline: solid 4px $black;
    color: $black;
  }


  .gi-disclosure__toggle::after {
    content: "";
    height: 50%;
    right: 0px;
    top: 50%;
  }

  .gi-disclosure__toggle:focus {
    &::after {
      border-bottom: solid 3px transparent;
    }
  }
}

// fix as part of 5058
.gi-disclosure__show-hide-text {
  color: $link-color;
}

// 3831 Buttons part 2

button.btn--disclosure-toggle { //TODO Refactor - this class also exists in buttons.scss and above in this file, can they all be combined into one for easier debugging?
  padding: 5px 35px 5px 12px;
  box-sizing: border-box;
  margin: 0 10px 10px 0;
  font-family: inherit;
  position: relative;
  display: inline-block;
  border-radius: 6px;
  cursor: pointer;
  font-weight: 600;
  text-decoration: none;
  transition: all .5s cubic-bezier(.25,.8,.25,1);

  &:hover {
    cursor: pointer;
    box-shadow: inset 0 0 20em rgba(0,0,0,0.2);
    text-decoration: underline;
    border-bottom: 0px !important;
  }

  &:focus {
    background-color: $focus-color;
    color: $black;
    box-shadow: 0 2px 0 $black;
    outline: none;
    transition: none;
    text-decoration: none;
  }
  &:hover {
    text-decoration: underline;
  }
}

/*========================================================
5168 Disclosure styling in forms - Forms global styling
========================================================*/
.icmverticalaccordion--container{
  border: none;
}


.icmform .icmhideborder .icmlegend,
.icmform div.icmverticalaccordion__heading{
  border-bottom: 1px solid $grey-3;
}

.icmform .icmhideborder .icmlegend:hover,
.icmform div.icmverticalaccordion__heading:hover{
  background: $grey-5;
  text-decoration: underline;
}

//Show
.icmverticalaccordion__heading:after{
  content: "Show";
  font-weight: 700;
  background-color: transparent;
  background-image: $disclosure-show-blue;
  background-repeat: no-repeat;
  background-position: 95% 50%;
  background-size: 18px 18px;
  display: inline-block;
  padding-right: 28px;
  color: $link-color;
}

.icmverticalaccordion__heading:focus:after{
  background-color: $focus-color;
  background-image: $disclosure-show-black;
  color: $black;
  border-bottom: 3px solid $black;
}

.icmverticalaccordion__heading:focus:hover:after{
  background-color: $focus-color;
  color: $black;
  border-bottom: 3px solid $black;
}

//Hide
.icmverticalaccordion--open.icmverticalaccordion__heading:after{
 content: "Hide";
 background-image: $disclosure-hide-blue;
 background-repeat: no-repeat;
 transform: none;
}

.icmverticalaccordion--open.icmverticalaccordion__heading:focus:after{
  background-color: $focus-color;
  background-image: $disclosure-hide-black;
  color: $black;
  border-bottom: 3px solid $black;

}

.icmverticalaccordion--open.icmverticalaccordion__heading:focus:hover:after{
  background-color: $focus-color;
  color: $black;
  border-bottom: 3px solid $black;
}

//5468 - remove blue focus from mobile search filter
.gi-accordion--focus {
  outline: none;
}

//5714 Disclosure loading as page content
html.js-hide-until-ready,
body.js-hide-until-ready {
	visibility: hidden;
}

